# Projeto-EBAC-PokeAPI

./: .gitignore  Dockerfile  Exigencias.md  README.md  docker-compose.yml  pokeapi.db
.github/workflows/: deploy.yml  python-app.yml
logstash/: logstash.conf
pokeapi/: pyproject.toml
pokeapi/src/pokeapi/: main.py
pokeapi/src/pokeapi/log/: logging.yaml  logs_settings.py
pokeapi/src/pokeapi/routers/: alterar_deletar_criar_pokemons.py  buscar_pokemon.py
pokeapi/src/pokeapi/schemas/: schema_alterar_criar_pokemons.py
pokeapi/src/pokeapi/services/database/: criacao_database.py  models.py
pokeapi/src/pokeapi/services/pokemon_service/: requisicao_pokeapi.py
pokeapi/src/pokeapi/services/redis_cache/: redis_config.py
pokeapi/tests/: test_alterar_criar_deletar_pokemon.py  test_buscar_pokemon_esperando_error.py  test_buscar_pokemon_esperando_sucess.py
