[project]
name = "pokeapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Cauan Penha",email = "cauanppenha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.139.0,<0.140.0)",
    "requests (>=2.34.2,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "redis (==4.6.0)",
    "celery (>=5.6.3,<6.0.0)",
    "elasticsearch (>=8.11.0,<9.0.0)",
    "aiohttp (>=3.14.1,<4.0.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "httpx2 (>=2.7.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "pokeapi", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
